--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<h1>Home</h1>
+<h1>J Reddys Blog</h1>
 
-<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
+<%= link_to "J Reddys Blog", articles_path %> | <%= link_to "About", about_path %>
