--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<div class="center jumbotron">
 <h1>J Reddys Blog</h1>
 
-<%= link_to "J Reddys Blog", articles_path %> | <%= link_to "About", about_path %>
+<%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg" %>
+</div>
